<resources>
    <string name="app_name">CurrencyConverterVK</string>
    <string name="curr_convertor">Конвертатор валют</string>
    <string name="curr_input_selector">curr_input_selector</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="_0">0</string>
    <string name="convert">Сконвертировать</string>
    <string name="val_1">Валюта 1</string>
    <string name="val_2">Валюта 2</string>
    <string name="_1">1</string>
    <string-array name="currency">
        <item>USD</item>
        <item>RUB</item>
        <item>EUR</item>
        <item>BYN</item>
    </string-array>
</resources>